ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-ingress
  namespace: monitoring-system
spec:
  ingressClassName: traefik
  rules:
    - host: nematdoust.osdl.ir
      http:
        paths:
          - path: /vmui
            pathType: Prefix
            backend:
              service:
                name: vmauth-vmauth
                port:
                  number: 8427
    - host: nematdoust.osdl.ir
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: vmauth-vmauth
                port:
                  number: 8427
